--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "creocoder/yii2-translateable": "^1.0",
+        "iutbay/yii2-mm": "*",
+        "codemix/yii2-localeurls": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
