--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "iutbay/yii2-mm": "*",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "codemix/yii2-localeurls": "dev-master",
-        "mdmsoft/yii2-admin": "~2.0"
+        "mdmsoft/yii2-admin": "~2.0",
+        "yiisoft/yii2-authclient": "~2.2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
