--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "codemix/yii2-localeurls": "dev-master",
         "mdmsoft/yii2-admin": "~2.0",
-        "yiisoft/yii2-authclient": "~2.2.0"
+        "yiisoft/yii2-authclient": "~2.2.0",
+        "bubasuma/yii2-simplechat": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
