--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "codemix/yii2-localeurls": "dev-master",
         "mdmsoft/yii2-admin": "~2.0",
         "yiisoft/yii2-authclient": "~2.2.0",
-        "bubasuma/yii2-simplechat": "*"
+        "bubasuma/yii2-simplechat": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
