--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "codemix/yii2-localeurls": "dev-master",
         "mdmsoft/yii2-admin": "~2.0",
         "yiisoft/yii2-authclient": "~2.2.0",
-        "bubasuma/yii2-simplechat": "dev-master"
+        "bubasuma/yii2-simplechat": "~2.0.0",
+        "yiisoft/yii2-twig": "^2.0@dev",
+        "bower-asset/twig.js" : "0.8.4@stable"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
